# a-icon.com

./: .gitignore  DEPLOY-ANGULAR-PRESS-MANUAL.md  DEPLOY-ANGULAR-PRESS.md  DEPLOYMENT.md  DEPLOYMENT_MANUAL.md  E2E_TESTS_AND_FIXES.md  README.md  STATIC-HOSTING-SETUP.md  STATIC-HOSTING.md  a-icon-architecture.md  add-static-site.ps1  deploy-angular-press.ps1  deploy-api.ps1  deploy-app.ps1  deploy-dns-and-app.ps1  deploy-docker-images.ps1  deploy-from-github.ps1  deploy-remote.ps1  deploy-to-droplet.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  droplet-info.json  list-static-sites.ps1  playwright.config.ts  remove-static-site.ps1  setup-api-subdomain.ps1  setup-ssl.ps1  test-static-hosting.ps1  test-upload.html
a-icon-api/: .gitignore  Dockerfile  MIGRATION.md  package-lock.json  package.json
a-icon-api/src/: app.module.ts  main.ts
a-icon-api/src/admin/: admin.controller.ts  admin.module.ts  admin.service.ts
a-icon-api/src/database/: database.service.ts
a-icon-api/src/directory/: directory.controller.ts  directory.module.ts  directory.service.ts
a-icon-api/src/favicon/: favicon-generator.service.ts  (+3 more)
a-icon-api/test/: app.e2e-spec.ts
a-icon-reg-api/: API_REFERENCE.md  CLEANUP_COMPLETE.md  COMPLETE.md  DEPLOYMENT.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md  README.md  SDK_NOTES.md  SUMMARY.md
a-icon-reg-api/bundle-check/: openapi.yaml
a-icon-reg-api/handlers/admin-delete/: Cargo.toml
a-icon-reg-api/handlers/admin-delete/src/: main.rs
a-icon-reg-api/handlers/directory/: Cargo.toml
a-icon-reg-api/handlers/directory/src/: main.rs
a-icon-reg-api/handlers/storage-asset/: Cargo.toml
a-icon-reg-api/handlers/storage-asset/src/: main.rs
a-icon-reg-api/scripts/: build-all-handlers.sh  build-all.ps1  build-all.sh  build-handlers.sh  build-linux.sh  deploy-directory.ps1  deploy-to-reg.ps1  deploy-to-reg.sh  fix-aws-versions.ps1  fix-handlers.ps1  fix-imports.ps1  test-endpoints.sh  wrap-db-errors.sh
a-icon-reg-api/shared/: Cargo.toml
a-icon-reg-api/shared/src/: admin.rs  database.rs  error.rs  lib.rs  storage.rs  utils.rs  validation.rs
a-icon-web/: .gitignore  Dockerfile  PWA-SETUP.md  README.md  angular.json  generate-pwa-icons.js  package-lock.json  package.json
a-icon-web/public/: browserconfig.xml  manifest.json  register-sw.js  sw.js
a-icon-web/src/: index.html  server.ts  styles.scss
demo-handler/: demo-api.rs  demo-openapi.yaml  deploy-demo.ps1
e2e/: README.md  favicon.spec.ts  package.json
hello-world/: Dockerfile  index.html
scripts/: cleanup-old-api.sh  setup-gateway.sh  setup-sqlite-service.sh
terraform/: .gitignore  cloud-init.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+45 files in other folders)
