[package]
name = "a-icon-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
regex = "1.0"
md5 = "0.7"

# For MinIO/S3 storage
aws-sdk-s3 = "1.50"
aws-config = "1.5"
tokio = { version = "1.0", features = ["full"] }

# Image processing
image = "0.25"

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "a_icon_shared"
path = "src/lib.rs"

