[package]
name = "directory"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "directory"
path = "src/main.rs"

[dependencies]
rust-edge-gateway-sdk = { git = "https://github.com/Senneseph/rust-edge-gateway.git" }
a-icon-shared = { path = "../../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

